# GrafoDB

./: .Rbuildignore  .Rprofile  .bumpversion.cfg  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CHANGELOG.md  CONTRIBUTING.rst  DESCRIPTION  Dockerfile  GrafoDB_1.7.0.tgz  LICENSE  Makefile  NAMESPACE  README.md  autotest.r  configure  configure.ac  dump.sql  lib_mgt.r  schema.sql  todo.org
.circleci/: config.yml
R/: RcppExports.R  assert_dag.r  build_archi.r  checkDAG.r  check_dag.r  cluster.r  conflicts.r  copy_graph.r  core.r  create_time_series.r  db.r  delete_graph.r  diff.r  edita.r  elimina.r  evaluate.r  expr.r  find_deps.r  formule.r  functions.r  generics.r  history.r  life_cycle.r  logging.r  lookup.r  metadati.r  navigate.r  old_grafo_impl.r  patch.r  persistence.r  persistence_utils.r  progressbar.r  redis.r  rename.r  rmNode.r  ser.r  sqlhelper.r  subsetting.r  tickets.r  update_archi.r  (+4 more)
_src/: Makevars  RcppExports.R  RcppExports.cpp  abstract_adapter.hpp  base_adapter.hpp  configure  configure.ac  conflicts.hpp  copy_graph.hpp  create_graph.cpp  create_graph.hpp  db_adapter.cpp  do_history_nativo.cpp  grafodb.cpp  series.hpp  tags.hpp
man/: GrafoDB-GrafoDB-method.Rd  GrafoDB-class.Rd  GrafoDB-methods.Rd  GrafoDB.Rd  GraphDB_initialize.Rd  Last.lib.Rd  SQLHelper-class.Rd  SQLHelper.Rd  assert_dag.Rd  buildConnection-internal.Rd  build_connection-internal.Rd  checkDAG.Rd  check_dag.Rd  clutter_function.Rd  clutter_with_params_and_return_internal.Rd  clutter_with_params_internal.Rd  convert_data_frame.Rd  countRolling.Rd  deps.Rd  (+135 more)
(+62 files in other folders)
