AC_INIT(GrafoDB, 1.4.12)
AC_MSG_NOTICE([Preparing for GrafoDB shared lib])
AC_PROG_CC
AC_PROG_CXX
AC_LANG(C)
AC_LANG(C++)
AC_CHECK_HEADERS(string)
AC_CHECK_HEADERS(map)
AC_CHECK_HEADERS(iostream)
AC_CHECK_HEADERS(vector)
AC_CHECK_HEADERS(sstream)
# AC_CHECK_LIB(pq, PQcmdStatus)
AC_OUTPUT(src/Makevars)
